[macOS] Unreviewed, non-unified build fixes https://bugs.webkit.org/show_bug.cgi?id=237586

* Shared/ModelIdentifier.h:
* UIProcess/API/Cocoa/_WKRemoteWebInspectorViewControllerInternal.h:
* UIProcess/Cocoa/ModelElementControllerCocoa.mm:
* UIProcess/ModelElementController.h:



Canonical link: https://commits.webkit.org/248193@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291019 268f45cc-cd09-0410-ab3c-d52691b4dbfc